--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>{{project.id}}</title>
-  <meta name="description" content="{{project.description}}" />
-  <meta name="author" content="{{author.name}} ({{author.name}})" />
+  <title>sprite</title>
+  <meta name="description" content="tiny tool for splitting sprite sheets into json files" />
+  <meta name="author" content="semibran (Brandon Semilla)" />
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
   <link href="./style.css" rel="stylesheet" />
   <script defer src="./index.js"></script>
