update build step

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
   <meta name="author" content="semibran (Brandon Semilla)" />
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
   <link href="./style.css" rel="stylesheet" />
-  <script defer src="./index.js"></script>
+  <script defer src="./main.js"></script>
 </head>
 
-<body></body>
+<body>
+  <main id="app"></main>
+</body>
 
 </html>
