integrate selection helper

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>sprite</title>
   <meta name="description" content="tiny tool for splitting sprite sheets into json files" />
   <meta name="author" content="semibran (Brandon Semilla)" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,maximum-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,maximum-scale=1,user-scroll=0" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet" />
